# TensorFlash

./: CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
benchmarks/: bench.py
docs/: api_reference.md
examples/: basic_usage.py
python/: __init__.py  flash_attention.py
scripts/: remove-commands-demo.ps1
src/cpp/: main.cpp
src/cuda/: flash.cu  flash.cuh
tests/: test_backward.py  test_forward.py  test_precision.py
